ADM-442 update calculate logic and add more tests